--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "type": "git",
     "url": "http://github.com/PitPik/VOM.git"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "grunt-contrib-uglify": "^2.0.0",
     "grunt": "^1.0.1",
     "grunt-smushit": "^2.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "test"
   },
